--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=department-service
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
