--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.application.name=DEPARTMENT-SERVICE
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
