--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,20 @@
 spring.application.name=API-GATEWAY
-
-
-
+server.port=9191
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+management.endpoints.web.exposure.include=*
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+
+
+## Routes for Employee Service
+## spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
+## spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
+## spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
+
+## Routes for Department Service
+## spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
+## spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
+## spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+
