Refactor project configuration and dependencies
- Adjust IDE settings in .idea/compiler.xml, encodings.xml, and misc.xml
- Update application.properties in config-server for improved configuration
- Revise pom.xml and application.properties in department-service for dependency and config updates
- Modify pom.xml and application.properties in employee-service to reflect new settings

--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=DEPARTMENT-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
