--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=config-server
+spring.application.name=CONFIG-SERVER
+server.port=8888
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.cloud.config.server.git.uri=https://github.com/Runadee/SpringBoot-Microservices/tree/main/config-server
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
