--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 
 spring.application.name=EMPLOYEE-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
