--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+management.endpoints.web.exposure.include=*
+
+spring.boot.message = Hello , Department Service Updated !
 
