--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -5,10 +5,17 @@ spring.datasource.password=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
 
-spring.boot.message = Hello , Department Service Updated !
+spring.boot.message = Hello Department service project
+
+
 
