chore: Update files:   - api-gateway/pom.xml   - api-gateway/src/main/resources/application.properties   - department-service/src/main/resources/application.properties   - employee-service/src/main/resources/application.properties
feat: Add new file:
  - zipkin-server-3.3.0-exec.jar

--- a/api-gateway /src/main/resources/application.properties
+++ b/api-gateway /src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
 spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+
+spring.zipkin.base-url=http://127.0.0.1:9411/
