--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=http://127.0.0.1:9411/
+
 
 spring.boot.message = Hello Department service project
 
