--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.rabbitmq.password=guest
 spring.application.name=EMPLOYEE-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.zipkin.base-url=http://127.0.0.1:9411/
+
 
 spring.boot.message = Hello Employee service project
